[gd_scene load_steps=20 format=2]

[ext_resource path="res://Explora/Regular_172.tres" type="DynamicFont" id=1]
[ext_resource path="res://Quicksilver/Regular_40.tres" type="DynamicFont" id=2]
[ext_resource path="res://Quicksilver/Regular_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menu/twitter.svg" type="Texture" id=4]
[ext_resource path="res://Menu/itch.svg" type="Texture" id=5]
[ext_resource path="res://Menu/twitch.svg" type="Texture" id=6]
[ext_resource path="res://Menu/itch_hover.svg" type="Texture" id=7]
[ext_resource path="res://Menu/twitter_hover.svg" type="Texture" id=8]
[ext_resource path="res://Menu/twitch_hover.svg" type="Texture" id=9]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=10]
[ext_resource path="res://Hut/Hut.glb" type="PackedScene" id=11]
[ext_resource path="res://Pot/Pot.tscn" type="PackedScene" id=12]
[ext_resource path="res://select.mp3" type="AudioStream" id=13]

[sub_resource type="InputEventAction" id=1]
action = "back"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="ProceduralSky" id=5]

[sub_resource type="Environment" id=6]
background_mode = 2
background_sky = SubResource( 5 )
ambient_light_color = Color( 0.109804, 0.109804, 0.109804, 1 )
dof_blur_far_enabled = true
dof_blur_far_distance = 4.0
dof_blur_far_transition = 3.0
dof_blur_far_quality = 2
dof_blur_near_enabled = true
dof_blur_near_distance = 10.0
dof_blur_near_transition = 3.0
dof_blur_near_quality = 2
glow_enabled = true

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spatial/Camera:fov")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 50.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rotate"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Spatial:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 7.5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 8, 0 ), Vector3( 0, -7, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Spatial/Camera:fov")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 50.0, 40.0, 50.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Pot")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 3.5, 6, 8.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "stir"
}, {
"args": [ true ],
"method": "stir"
}, {
"args": [ true ],
"method": "stir"
}, {
"args": [ true ],
"method": "stir"
} ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 1280.0
margin_bottom = 540.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 320.0
margin_right = 960.0
margin_bottom = 496.0

[node name="Title" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 1 )
text = "The Alchemyst"

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 640.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 64 )

[node name="Continue" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 640.0
margin_bottom = 344.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 0.309804, 0.309804, 0.309804, 1 )
custom_colors/font_color_hover = Color( 1, 0.913725, 0, 1 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
text = "Continue"
flat = true

[node name="New Game" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 640.0
margin_bottom = 412.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 1, 0.913725, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "New Game"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 416.0
margin_right = 640.0
margin_bottom = 480.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_hover = Color( 1, 0.913725, 0, 1 )
custom_fonts/font = ExtResource( 2 )
shortcut_in_tooltip = false
shortcut = SubResource( 2 )
text = "Exit to desktop"
flat = true

[node name="Spacer2" type="Control" parent="VBoxContainer"]
margin_top = 572.0
margin_right = 1280.0
margin_bottom = 588.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
custom_constants/separation = 16

[node name="Spacer3" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_right = 16.0
margin_bottom = 100.0
rect_min_size = Vector2( 16, 0 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 32.0
margin_right = 539.0
margin_bottom = 100.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Created by Robin Arys in 48 hours for Ludum Dare 49"
valign = 1

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 555.0
margin_right = 1035.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Itch" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1051.0
margin_right = 1111.0
margin_bottom = 100.0
rect_min_size = Vector2( 60, 0 )
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Twitter" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1127.0
margin_right = 1187.0
margin_bottom = 100.0
rect_min_size = Vector2( 60, 0 )
mouse_default_cursor_shape = 2
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Twitch" type="TextureButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1203.0
margin_right = 1248.0
margin_bottom = 100.0
rect_min_size = Vector2( 45, 0 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 1264.0
margin_right = 1280.0
margin_bottom = 100.0
rect_min_size = Vector2( 16, 0 )

[node name="Hut" parent="." instance=ExtResource( 11 )]

[node name="Pot" parent="." instance=ExtResource( 12 )]
emit_bubbles = true
liquid_light = true

[node name="Spatial" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Spatial"]
pause_mode = 1
transform = Transform( 1, 0, 0, 0, 0.914868, 0.403753, 0, -0.403753, 0.914868, 0, 2.22885, 3.53498 )
environment = SubResource( 6 )
current = true
fov = 50.0
__meta__ = {
"_editor_description_": ""
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/RESET = SubResource( 3 )
anims/rotate = SubResource( 4 )

[node name="UIAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0
pitch_scale = 0.8
autoplay = true
bus = "UI"

[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Continue" to="UIAudio" method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/New Game" to="UIAudio" method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="UIAudio" method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/Itch" to="UIAudio" method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Itch" to="." method="_on_Itch_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/Twitter" to="UIAudio" method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Twitter" to="." method="_on_Twitter_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/Twitch" to="UIAudio" method="play"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Twitch" to="." method="_on_Twitch_pressed"]
[connection signal="ready" from="AnimationPlayer" to="AnimationPlayer" method="play" binds= [ "rotate" ]]
